--- a/roles/apache/files/001_crt1.conf
+++ b/roles/apache/files/001_crt1.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-  ServerName crt1.lab.local
+  ServerName crt1.lab.home
   ServerAlias crt1
   RewriteEngine On
   RewriteCond %{HTTPS} off
@@ -7,7 +7,7 @@
 </VirtualHost>
 
 <VirtualHost *:443>
-  ServerName crt1.lab.local
+  ServerName crt1.lab.home
   ServerAlias crt1
   ErrorLog /var/log/httpd/ssl_error_log
   LogLevel warn
@@ -21,7 +21,7 @@ SSLCipherSuite          ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA38
 SSLHonorCipherOrder     on
 SSLCompression          off
 
-  SSLCertificateFile /etc/pki/tls/certs/crt1_lab_local.crt
-  SSLCertificateKeyFile /etc/pki/tls/private/crt1_lab_local.key
-  SSLCertificateChainFile /etc/pki/tls/certs/localsrvca.crt
+  SSLCertificateFile /etc/pki/tls/certs/crt1_lab_home.crt
+  SSLCertificateKeyFile /etc/pki/tls/private/crt1_lab_home.key
+  SSLCertificateChainFile /etc/pki/tls/certs/homesrvca.crt
 </VirtualHost>
