--- a/roles/apache/files/002_crt2.conf
+++ b/roles/apache/files/002_crt2.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-  ServerName crt2.lab.local
+  ServerName crt2.lab.home
   ServerAlias crt2
   RewriteEngine On
   RewriteCond %{HTTPS} off
@@ -7,7 +7,7 @@
 </VirtualHost>
 
 <VirtualHost *:443>
-  ServerName crt2.lab.local
+  ServerName crt2.lab.home
   ServerAlias crt2
   ErrorLog /var/log/httpd/ssl_error_log
   LogLevel warn
@@ -21,7 +21,7 @@ SSLCipherSuite          ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY130
 SSLHonorCipherOrder     on
 SSLCompression          off
 
-  SSLCertificateFile /etc/pki/tls/certs/crt2_lab_local.crt
-  SSLCertificateKeyFile /etc/pki/tls/private/crt2_lab_local.key
-  SSLCertificateChainFile /etc/pki/tls/certs/localsrvca.crt
+  SSLCertificateFile /etc/pki/tls/certs/crt2_lab_home.crt
+  SSLCertificateKeyFile /etc/pki/tls/private/crt2_lab_home.key
+  SSLCertificateChainFile /etc/pki/tls/certs/homesrvca.crt
 </VirtualHost>
