--- a/roles/dovecot/tasks/main.yml
+++ b/roles/dovecot/tasks/main.yml
@@ -15,32 +15,32 @@
 - shell: creates=/etc/pki/dovecot/certs/dovecot.csr openssl req -newkey rsa:2048 -nodes
    -keyout /etc/pki/dovecot/private/dovecot.pem
    -out /etc/pki/dovecot/certs/dovecot.csr
-   -subj "{{ cert_org }}CN=imap.lab.local"
+   -subj "{{ cert_org }}CN=imap.lab.home"
 - shell: openssl x509 -req -days 365 -sha256
    -in /etc/pki/dovecot/certs/dovecot.csr
    -out /etc/pki/dovecot/certs/dovecot.crt
-   -CA /etc/pki/tls/certs/localsrvca.crt
-   -CAkey /etc/pki/tls/private/localsrvca.key
+   -CA /etc/pki/tls/certs/homesrvca.crt
+   -CAkey /etc/pki/tls/private/homesrvca.key
    -CAcreateserial
    -extensions EXTS
    -extfile <(cat
    <(printf "[EXTS]\n")
    <(printf "authorityKeyIdentifier=keyid:always,issuer\n")
    <(printf "subjectKeyIdentifier=hash\n")
-   <(printf "subjectAltName=DNS:imap.lab.local,DNS:pop.lab.local,IP:172.16.1.201\n")
+   <(printf "subjectAltName=DNS:imap.lab.home,DNS:pop.lab.home,IP:172.16.1.201\n")
    <(printf "keyUsage=critical,digitalSignature,keyEncipherment\n")
    <(printf "extendedKeyUsage=serverAuth,clientAuth\n")
-   <(printf "crlDistributionPoints=URI:http://ca.lab.local/localsrvca.crl\n")
+   <(printf "crlDistributionPoints=URI:http://ca.lab.home/homesrvca.crl\n")
    <(printf "certificatePolicies=@polsect\n")
-   <(printf "authorityInfoAccess=OCSP;URI:http://ocsp.lab.local,caIssuers;URI:http://ca.lab.local/localsrvca.crt\n")
+   <(printf "authorityInfoAccess=OCSP;URI:http://ocsp.lab.home,caIssuers;URI:http://ca.lab.home/homesrvca.crt\n")
    <(printf "basicConstraints=critical,CA:false\n")
-   <(printf "[polsect]\npolicyIdentifier=anyPolicy\nCPS=https://www.lab.local/CPS\n")
+   <(printf "[polsect]\npolicyIdentifier=anyPolicy\nCPS=https://www.lab.home/CPS\n")
    )
   args:
    executable: /bin/bash
 - file: path=/etc/pki/dovecot/private/dovecot.pem owner=dovecot group=dovecot
 
-- shell: cat /etc/pki/dovecot/certs/dovecot.crt /etc/pki/tls/certs/localsrvca.crt > /etc/pki/dovecot/certs/dovecot.pem
+- shell: cat /etc/pki/dovecot/certs/dovecot.crt /etc/pki/tls/certs/homesrvca.crt > /etc/pki/dovecot/certs/dovecot.pem
 
 - name: restart dovecot
   service: name=dovecot state=restarted
