--- a/roles/haproxy/tasks/main.yml
+++ b/roles/haproxy/tasks/main.yml
@@ -9,31 +9,31 @@
 - shell: creates=/etc/pki/tls/certs/haproxy.csr openssl req -newkey rsa:2048 -nodes 
    -keyout /etc/pki/tls/private/haproxy.key 
    -out /etc/pki/tls/certs/haproxy.csr 
-   -subj "{{ cert_org }}CN=www.lab.local"
+   -subj "{{ cert_org }}CN=www.lab.home"
 - shell: openssl x509 -req -days 365 -sha256
    -in /etc/pki/tls/certs/haproxy.csr 
    -out /etc/pki/tls/certs/haproxy.crt
-   -CA /etc/pki/tls/certs/localsrvca.crt 
-   -CAkey /etc/pki/tls/private/localsrvca.key 
+   -CA /etc/pki/tls/certs/homesrvca.crt 
+   -CAkey /etc/pki/tls/private/homesrvca.key 
    -CAcreateserial
    -extensions EXTS
    -extfile <(cat
    <(printf "[EXTS]\n")
    <(printf "authorityKeyIdentifier=keyid:always,issuer\n")
    <(printf "subjectKeyIdentifier=hash\n")
-   <(printf "subjectAltName=DNS:www.lab.local,IP:172.16.1.201\n")
+   <(printf "subjectAltName=DNS:www.lab.home,IP:172.16.1.201\n")
    <(printf "keyUsage=critical,digitalSignature,keyEncipherment\n")
    <(printf "extendedKeyUsage=serverAuth,clientAuth\n")
-   <(printf "crlDistributionPoints=URI:http://ca.lab.local/localsrvca.crl\n")
+   <(printf "crlDistributionPoints=URI:http://ca.lab.home/homesrvca.crl\n")
    <(printf "certificatePolicies=@polsect\n")
-   <(printf "authorityInfoAccess=OCSP;URI:http://ocsp.lab.local,caIssuers;URI:http://ca.lab.local/localsrvca.crt\n")
+   <(printf "authorityInfoAccess=OCSP;URI:http://ocsp.lab.home,caIssuers;URI:http://ca.lab.home/homesrvca.crt\n")
    <(printf "basicConstraints=critical,CA:false\n")
-   <(printf "[polsect]\npolicyIdentifier=anyPolicy\nCPS=https://www.lab.local/CPS\n")
+   <(printf "[polsect]\npolicyIdentifier=anyPolicy\nCPS=https://www.lab.home/CPS\n")
    )
   args:
    executable: /bin/bash
 
-- shell: chdir=/etc/pki/tls creates=/etc/pki/tls/haproxy.pem /bin/cat certs/haproxy.crt private/haproxy.key certs/localsrvca.crt > /etc/pki/tls/haproxy.pem
+- shell: chdir=/etc/pki/tls creates=/etc/pki/tls/haproxy.pem /bin/cat certs/haproxy.crt private/haproxy.key certs/homesrvca.crt > /etc/pki/tls/haproxy.pem
 
 - name: restart haproxy
   service: name=haproxy state=restarted enabled=yes
