--- a/roles/mkclicerts/tasks/main.yml
+++ b/roles/mkclicerts/tasks/main.yml
@@ -3,12 +3,12 @@
 - shell: creates=/home/vagrant/vagrantcln.csr openssl req -newkey rsa:2048 -nodes
    -keyout /home/vagrant/vagrantcln.key
    -out /home/vagrant/vagrantcln.csr
-   -subj "/emailAddress=vagrant\@lab.local{{ client_org }}CN=vagrant"
+   -subj "/emailAddress=vagrant\@lab.home{{ client_org }}CN=vagrant"
 - shell: openssl x509 -req -days 365 -sha256
    -in /home/vagrant/vagrantcln.csr
    -out /home/vagrant/vagrantcln.crt
-   -CA /etc/pki/tls/certs/localclnca.crt 
-   -CAkey /etc/pki/tls/private/localclnca.key 
+   -CA /etc/pki/tls/certs/homeclnca.crt 
+   -CAkey /etc/pki/tls/private/homeclnca.key 
    -CAcreateserial
    -extensions EXTS
    -extfile <(cat
@@ -18,11 +18,11 @@
    <(printf "subjectAltName=email:copy\n")
    <(printf "keyUsage=critical,digitalSignature,keyEncipherment\n")
    <(printf "extendedKeyUsage=clientAuth,emailProtection\n")
-   <(printf "crlDistributionPoints=URI:http://ca.lab.local/localclnca.crl\n")
+   <(printf "crlDistributionPoints=URI:http://ca.lab.home/homeclnca.crl\n")
    <(printf "certificatePolicies=@polsect\n")
-   <(printf "authorityInfoAccess=OCSP;URI:http://ocsp.lab.local,caIssuers;URI:http://ca.lab.local/localclnca.crt\n")
+   <(printf "authorityInfoAccess=OCSP;URI:http://ocsp.lab.home,caIssuers;URI:http://ca.lab.home/homeclnca.crt\n")
    <(printf "basicConstraints=critical,CA:false\n")
-   <(printf "[polsect]\npolicyIdentifier=anyPolicy\nCPS=https://www.lab.local/CPS\n")
+   <(printf "[polsect]\npolicyIdentifier=anyPolicy\nCPS=https://www.lab.home/CPS\n")
    )
   args:
     executable: /bin/bash
@@ -33,12 +33,12 @@
 - shell: creates=/home/vagrant/vagrantsrv.csr openssl req -newkey rsa:2048 -nodes
    -keyout /home/vagrant/vagrantsrv.key
    -out /home/vagrant/vagrantsrv.csr
-   -subj "/emailAddress=vagrant\@lab.local{{ client_org }}CN=vagrant"
+   -subj "/emailAddress=vagrant\@lab.home{{ client_org }}CN=vagrant"
 - shell: openssl x509 -req -days 365 -sha256
    -in /home/vagrant/vagrantsrv.csr
    -out /home/vagrant/vagrantsrv.crt
-   -CA /etc/pki/tls/certs/localsrvca.crt 
-   -CAkey /etc/pki/tls/private/localsrvca.key 
+   -CA /etc/pki/tls/certs/homesrvca.crt 
+   -CAkey /etc/pki/tls/private/homesrvca.key 
    -CAcreateserial
    -extensions EXTS
    -extfile <(cat
@@ -48,11 +48,11 @@
    <(printf "subjectAltName=email:copy\n")
    <(printf "keyUsage=critical,digitalSignature,keyEncipherment\n")
    <(printf "extendedKeyUsage=clientAuth,emailProtection\n")
-   <(printf "crlDistributionPoints=URI:http://ca.lab.local/localsrvca.crl\n")
+   <(printf "crlDistributionPoints=URI:http://ca.lab.home/homesrvca.crl\n")
    <(printf "certificatePolicies=@polsect\n")
-   <(printf "authorityInfoAccess=OCSP;URI:http://ocsp.lab.local,caIssuers;URI:http://ca.lab.local/localsrvca.crt\n")
+   <(printf "authorityInfoAccess=OCSP;URI:http://ocsp.lab.home,caIssuers;URI:http://ca.lab.home/homesrvca.crt\n")
    <(printf "basicConstraints=critical,CA:false\n")
-   <(printf "[polsect]\npolicyIdentifier=anyPolicy\nCPS=https://www.lab.local/CPS\n")
+   <(printf "[polsect]\npolicyIdentifier=anyPolicy\nCPS=https://www.lab.home/CPS\n")
    )
   args:
     executable: /bin/bash
@@ -63,12 +63,12 @@
 - shell: creates=/home/vagrant/sslusercln.csr openssl req -newkey rsa:2048 -nodes
    -keyout /home/vagrant/sslusercln.key
    -out /home/vagrant/sslusercln.csr
-   -subj "/emailAddress=ssluser\@lab.local{{ client_org }}CN=ssluser"
+   -subj "/emailAddress=ssluser\@lab.home{{ client_org }}CN=ssluser"
 - shell: openssl x509 -req -days 365 -sha256
    -in /home/vagrant/sslusercln.csr
    -out /home/vagrant/sslusercln.crt
-   -CA /etc/pki/tls/certs/localclnca.crt 
-   -CAkey /etc/pki/tls/private/localclnca.key 
+   -CA /etc/pki/tls/certs/homeclnca.crt 
+   -CAkey /etc/pki/tls/private/homeclnca.key 
    -CAcreateserial
    -extensions EXTS
    -extfile <(cat
@@ -78,11 +78,11 @@
    <(printf "subjectAltName=email:copy\n")
    <(printf "keyUsage=critical,digitalSignature,keyEncipherment\n")
    <(printf "extendedKeyUsage=clientAuth,emailProtection\n")
-   <(printf "crlDistributionPoints=URI:http://ca.lab.local/localclnca.crl\n")
+   <(printf "crlDistributionPoints=URI:http://ca.lab.home/homeclnca.crl\n")
    <(printf "certificatePolicies=@polsect\n")
-   <(printf "authorityInfoAccess=OCSP;URI:http://ocsp.lab.local,caIssuers;URI:http://ca.lab.local/localclnca.crt\n")
+   <(printf "authorityInfoAccess=OCSP;URI:http://ocsp.lab.home,caIssuers;URI:http://ca.lab.home/homeclnca.crt\n")
    <(printf "basicConstraints=critical,CA:false\n")
-   <(printf "[polsect]\npolicyIdentifier=anyPolicy\nCPS=https://www.lab.local/CPS\n")
+   <(printf "[polsect]\npolicyIdentifier=anyPolicy\nCPS=https://www.lab.home/CPS\n")
    )
   args:
     executable: /bin/bash
