--- a/roles/nginx/files/002_crt2.conf
+++ b/roles/nginx/files/002_crt2.conf
@@ -1,14 +1,14 @@
 server {
     listen              2080;
-    server_name         crt2.lab.local crt2;
+    server_name         crt2.lab.home crt2;
     return 301 https://$server_name$request_uri;
 }    
 
 server {
     listen              2443 ssl;
-    server_name         crt2.lab.local crt2;
-    ssl_certificate     /etc/pki/tls/certs/crt2_lab_local_chain.crt;
-    ssl_certificate_key /etc/pki/tls/private/crt2_lab_local.key;
+    server_name         crt2.lab.home crt2;
+    ssl_certificate     /etc/pki/tls/certs/crt2_lab_home_chain.crt;
+    ssl_certificate_key /etc/pki/tls/private/crt2_lab_home.key;
     ssl_protocols       TLSv1.2;
     ssl_ciphers         HIGH:!aNULL:!MD5;
 }
