--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -24,8 +24,8 @@
 - shell: openssl x509 -req -days 365 -sha256
    -in /etc/pki/tls/certs/localhost.csr
    -out /etc/pki/tls/certs/localhost.crt
-   -CA /etc/pki/tls/certs/localsrvca.crt 
-   -CAkey /etc/pki/tls/private/localsrvca.key 
+   -CA /etc/pki/tls/certs/homesrvca.crt 
+   -CAkey /etc/pki/tls/private/homesrvca.key 
    -CAcreateserial
    -extensions EXTS
    -extfile <(cat
@@ -35,71 +35,71 @@
    <(printf "subjectAltName=DNS:localhost,IP:127.0.0.1\n")
    <(printf "keyUsage=critical,digitalSignature,keyEncipherment\n")
    <(printf "extendedKeyUsage=serverAuth,clientAuth\n")
-   <(printf "crlDistributionPoints=URI:http://ca.lab.local/localsrvca.crl\n")
+   <(printf "crlDistributionPoints=URI:http://ca.lab.home/homesrvca.crl\n")
    <(printf "certificatePolicies=@polsect\n")
-   <(printf "authorityInfoAccess=OCSP;URI:http://ocsp.lab.local,caIssuers;URI:http://ca.lab.local/localsrvca.crt\n")
+   <(printf "authorityInfoAccess=OCSP;URI:http://ocsp.lab.home,caIssuers;URI:http://ca.lab.home/homesrvca.crt\n")
    <(printf "basicConstraints=critical,CA:false\n")
-   <(printf "[polsect]\npolicyIdentifier=anyPolicy\nCPS=https://www.lab.local/CPS\n")
+   <(printf "[polsect]\npolicyIdentifier=anyPolicy\nCPS=https://www.lab.home/CPS\n")
    )
   args:
     executable: /bin/bash
-- shell: cat /etc/pki/tls/certs/localhost.crt /etc/pki/tls/certs/localsrvca.crt > /etc/pki/tls/certs/localhost_chain.crt
+- shell: cat /etc/pki/tls/certs/localhost.crt /etc/pki/tls/certs/homesrvca.crt > /etc/pki/tls/certs/localhost_chain.crt
 
-- shell: creates=/etc/pki/tls/certs/crt1_lab_local.csr openssl req -newkey rsa:2048 -nodes
-   -keyout /etc/pki/tls/private/crt1_lab_local.key
-   -out /etc/pki/tls/certs/crt1_lab_local.csr
-   -subj "{{ cert_org }}CN=crt1.lab.local"
+- shell: creates=/etc/pki/tls/certs/crt1_lab_home.csr openssl req -newkey rsa:2048 -nodes
+   -keyout /etc/pki/tls/private/crt1_lab_home.key
+   -out /etc/pki/tls/certs/crt1_lab_home.csr
+   -subj "{{ cert_org }}CN=crt1.lab.home"
 - shell: openssl x509 -req -days 365 -sha256
-   -in /etc/pki/tls/certs/crt1_lab_local.csr
-   -out /etc/pki/tls/certs/crt1_lab_local.crt
-   -CA /etc/pki/tls/certs/localsrvca.crt 
-   -CAkey /etc/pki/tls/private/localsrvca.key 
+   -in /etc/pki/tls/certs/crt1_lab_home.csr
+   -out /etc/pki/tls/certs/crt1_lab_home.crt
+   -CA /etc/pki/tls/certs/homesrvca.crt 
+   -CAkey /etc/pki/tls/private/homesrvca.key 
    -CAcreateserial
    -extensions EXTS
    -extfile <(cat
    <(printf "[EXTS]\n")
    <(printf "authorityKeyIdentifier=keyid:always,issuer\n")
    <(printf "subjectKeyIdentifier=hash\n")
-   <(printf "subjectAltName=DNS:crt1.lab.local\n")
+   <(printf "subjectAltName=DNS:crt1.lab.home\n")
    <(printf "keyUsage=critical,digitalSignature,keyEncipherment\n")
    <(printf "extendedKeyUsage=serverAuth,clientAuth\n")
-   <(printf "crlDistributionPoints=URI:http://ca.lab.local/localsrvca.crl\n")
+   <(printf "crlDistributionPoints=URI:http://ca.lab.home/homesrvca.crl\n")
    <(printf "certificatePolicies=@polsect\n")
-   <(printf "authorityInfoAccess=OCSP;URI:http://ocsp.lab.local,caIssuers;URI:http://ca.lab.local/localsrvca.crt\n")
+   <(printf "authorityInfoAccess=OCSP;URI:http://ocsp.lab.home,caIssuers;URI:http://ca.lab.home/homesrvca.crt\n")
    <(printf "basicConstraints=critical,CA:false\n")
-   <(printf "[polsect]\npolicyIdentifier=anyPolicy\nCPS=https://www.lab.local/CPS\n")
+   <(printf "[polsect]\npolicyIdentifier=anyPolicy\nCPS=https://www.lab.home/CPS\n")
    )
   args:
     executable: /bin/bash
-- shell: cat /etc/pki/tls/certs/crt1_lab_local.crt /etc/pki/tls/certs/localsrvca.crt > /etc/pki/tls/certs/crt1_lab_local_chain.crt
+- shell: cat /etc/pki/tls/certs/crt1_lab_home.crt /etc/pki/tls/certs/homesrvca.crt > /etc/pki/tls/certs/crt1_lab_home_chain.crt
 
-- shell: creates=/etc/pki/tls/certs/crt2_lab_local.csr openssl req -newkey rsa:2048 -nodes
-   -keyout /etc/pki/tls/private/crt2_lab_local.key
-   -out /etc/pki/tls/certs/crt2_lab_local.csr
-   -subj "{{ cert_org }}CN=crt2.lab.local"
+- shell: creates=/etc/pki/tls/certs/crt2_lab_home.csr openssl req -newkey rsa:2048 -nodes
+   -keyout /etc/pki/tls/private/crt2_lab_home.key
+   -out /etc/pki/tls/certs/crt2_lab_home.csr
+   -subj "{{ cert_org }}CN=crt2.lab.home"
 - shell: openssl x509 -req -days 365 -sha256
-   -in /etc/pki/tls/certs/crt2_lab_local.csr
-   -out /etc/pki/tls/certs/crt2_lab_local.crt
-   -CA /etc/pki/tls/certs/localsrvca.crt 
-   -CAkey /etc/pki/tls/private/localsrvca.key 
+   -in /etc/pki/tls/certs/crt2_lab_home.csr
+   -out /etc/pki/tls/certs/crt2_lab_home.crt
+   -CA /etc/pki/tls/certs/homesrvca.crt 
+   -CAkey /etc/pki/tls/private/homesrvca.key 
    -CAcreateserial
    -extensions EXTS
    -extfile <(cat
    <(printf "[EXTS]\n")
    <(printf "authorityKeyIdentifier=keyid:always,issuer\n")
    <(printf "subjectKeyIdentifier=hash\n")
-   <(printf "subjectAltName=DNS:crt2.lab.local\n")
+   <(printf "subjectAltName=DNS:crt2.lab.home\n")
    <(printf "keyUsage=critical,digitalSignature,keyEncipherment\n")
    <(printf "extendedKeyUsage=serverAuth,clientAuth\n")
-   <(printf "crlDistributionPoints=URI:http://ca.lab.local/localsrvca.crl\n")
+   <(printf "crlDistributionPoints=URI:http://ca.lab.home/homesrvca.crl\n")
    <(printf "certificatePolicies=@polsect\n")
-   <(printf "authorityInfoAccess=OCSP;URI:http://ocsp.lab.local,caIssuers;URI:http://ca.lab.local/localsrvca.crt\n")
+   <(printf "authorityInfoAccess=OCSP;URI:http://ocsp.lab.home,caIssuers;URI:http://ca.lab.home/homesrvca.crt\n")
    <(printf "basicConstraints=critical,CA:false\n")
-   <(printf "[polsect]\npolicyIdentifier=anyPolicy\nCPS=https://www.lab.local/CPS\n")
+   <(printf "[polsect]\npolicyIdentifier=anyPolicy\nCPS=https://www.lab.home/CPS\n")
    )
   args:
     executable: /bin/bash
-- shell: cat /etc/pki/tls/certs/crt2_lab_local.crt /etc/pki/tls/certs/localsrvca.crt > /etc/pki/tls/certs/crt2_lab_local_chain.crt
+- shell: cat /etc/pki/tls/certs/crt2_lab_home.crt /etc/pki/tls/certs/homesrvca.crt > /etc/pki/tls/certs/crt2_lab_home_chain.crt
 
 - copy: src=default.conf dest=/etc/nginx/conf.d/default.conf owner=root group=root mode=0644
 - copy: src=001_crt1.conf dest=/etc/nginx/conf.d/001_crt1.conf owner=root group=root mode=0644
