--- a/roles/tomcat/tasks/main.yml
+++ b/roles/tomcat/tasks/main.yml
@@ -5,43 +5,43 @@
     - tomcat
     state: installed
   
-- shell: creates=/etc/pki/tls/certs/tomcat_lab_local.csr openssl req -newkey rsa:2048 -nodes
-   -keyout /etc/pki/tls/private/tomcat_lab_local.key
-   -out /etc/pki/tls/certs/tomcat_lab_local.csr
-   -subj "{{ cert_org }}CN=tomcat.lab.local"
+- shell: creates=/etc/pki/tls/certs/tomcat_lab_home.csr openssl req -newkey rsa:2048 -nodes
+   -keyout /etc/pki/tls/private/tomcat_lab_home.key
+   -out /etc/pki/tls/certs/tomcat_lab_home.csr
+   -subj "{{ cert_org }}CN=tomcat.lab.home"
 - shell: openssl x509 -req -days 365 -sha256
-   -in /etc/pki/tls/certs/tomcat_lab_local.csr
-   -out /etc/pki/tls/certs/tomcat_lab_local.crt
-   -CA /etc/pki/tls/certs/localsrvca.crt 
-   -CAkey /etc/pki/tls/private/localsrvca.key 
+   -in /etc/pki/tls/certs/tomcat_lab_home.csr
+   -out /etc/pki/tls/certs/tomcat_lab_home.crt
+   -CA /etc/pki/tls/certs/homesrvca.crt 
+   -CAkey /etc/pki/tls/private/homesrvca.key 
    -CAcreateserial
    -extensions EXTS
    -extfile <(cat
    <(printf "[EXTS]\n")
    <(printf "authorityKeyIdentifier=keyid:always,issuer\n")
    <(printf "subjectKeyIdentifier=hash\n")
-   <(printf "subjectAltName=DNS:tomcat.lab.local\n")
+   <(printf "subjectAltName=DNS:tomcat.lab.home\n")
    <(printf "keyUsage=critical,digitalSignature,keyEncipherment\n")
    <(printf "extendedKeyUsage=serverAuth,clientAuth\n")
-   <(printf "crlDistributionPoints=URI:http://ca.lab.local/localsrvca.crl\n")
+   <(printf "crlDistributionPoints=URI:http://ca.lab.home/homesrvca.crl\n")
    <(printf "certificatePolicies=@polsect\n")
-   <(printf "authorityInfoAccess=OCSP;URI:http://ocsp.lab.local,caIssuers;URI:http://ca.lab.local/localsrvca.crt\n")
+   <(printf "authorityInfoAccess=OCSP;URI:http://ocsp.lab.home,caIssuers;URI:http://ca.lab.home/homesrvca.crt\n")
    <(printf "basicConstraints=critical,CA:false\n")
-   <(printf "[polsect]\npolicyIdentifier=anyPolicy\nCPS=https://www.lab.local/CPS\n")
+   <(printf "[polsect]\npolicyIdentifier=anyPolicy\nCPS=https://www.lab.home/CPS\n")
    )
   args:
     executable: /bin/bash
 
 - shell: openssl pkcs12 -export 
-   -out /etc/pki/tls/certs/tomcat_lab_local.pfx 
-   -inkey /etc/pki/tls/private/tomcat_lab_local.key 
-   -in /etc/pki/tls/certs/tomcat_lab_local.crt 
-   -certfile /etc/pki/tls/certs/localsrvca.crt 
+   -out /etc/pki/tls/certs/tomcat_lab_home.pfx 
+   -inkey /etc/pki/tls/private/tomcat_lab_home.key 
+   -in /etc/pki/tls/certs/tomcat_lab_home.crt 
+   -certfile /etc/pki/tls/certs/homesrvca.crt 
    -password pass:changeit -passin pass:changeit -passout pass:changeit
 - shell: keytool -importkeystore 
-   -srckeystore /etc/pki/tls/certs/tomcat_lab_local.pfx 
+   -srckeystore /etc/pki/tls/certs/tomcat_lab_home.pfx 
    -srcstoretype pkcs12 
-   -destkeystore /etc/pki/tls/certs/tomcat_lab_local.jks 
+   -destkeystore /etc/pki/tls/certs/tomcat_lab_home.jks 
    -deststoretype JKS 
    -storepass changeit -srcstorepass changeit
    -noprompt
