--- a/roles/389ds/tasks/main.yml
+++ b/roles/389ds/tasks/main.yml
@@ -1,5 +1,5 @@
 --- 
-- shell: warn=no dnf -y module enable 389-ds
+- shell: dnf -y module enable 389-ds
   when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int >= 8
 
 - yum: name=389-ds-base state=installed
